# printit-microservices-monorepo

./: .editorconfig  .gitignore  Dockerfile.authentication  Dockerfile.file  README.md  Taskfile.yaml  auth.Dockerfile  compose-auth-dev.yaml  compose-auth.yaml  compose-authentication.yaml  compose-file-dev.yaml  compose-file.yaml  compose-live-traffic-dev.yaml  compose-order-dev.yaml  compose-order.yaml  compose-price-dev.yaml  compose-price.yaml  compose-shop.yaml  compose.yaml  file.Dockerfile  file.Dockerfile.dockerignore  index.js  kafka-create-topics.sh  kafka.Dockerfile  live-traffic.Dockerfile  notification.Dockerfile  notification.Dockerfile.dockerignore  order.Dockerfile  price.Dockerfile  price.Dockerfile.dockerignore  shop.Dockerfile
authentication/: requirements.txt
authentication/src/: app.py
file/: go.mod  go.sum
live-traffic/: copy-lua-scripts.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
notification/: package.json  pnpm-lock.yaml  tsconfig.json
order/: Cargo.toml  build.rs  go.mod  go.sum
postman/: rest_collection.json
price/: requirements.txt
shop/: Cargo.toml  build.rs
shop/src/: main.rs  main.rs~
shop/src/api/: mod.rs
shop/src/api/guard/: auth.rs  mod.rs
shop/src/api/guards/: mod.rs
shop/src/api/middleware/: auth_middlware.rs  mod.rs
shop/src/api/route/: mod.rs  shop.rs  shop_routes.rs  shop_routes.rs~
shop/src/client/: auth_grpc_client.rs  mod.rs  mongo_client.rs
shop/src/data/: location.rs  mod.rs  shop.rs
shop/src/service/: mod.rs  shop.rs
shop/src/services/: mod.rs  shop_service.rs
(+100 files in other folders)
