[package]
name = "shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10.3"
ws = { package = "rocket_ws", version = "0.1.0" }

[build-dependencies]
tonic-build = "0.11"
